<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.raphaelmiller.qpxexpressflights.MainActivity">

    <RadioButton
        android:id="@+id/multiRadioToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/radio_multi_destination"
        android:textAllCaps="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/oneWayRadioToggle"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioButton
        android:id="@+id/roundTripRadioToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/radio_round_trip"
        app:layout_constraintBaseline_toBaselineOf="@+id/oneWayRadioToggle"
        app:layout_constraintLeft_toRightOf="@+id/oneWayRadioToggle"
        app:layout_constraintRight_toLeftOf="@+id/multiRadioToggle" />

    <RadioButton
        android:id="@+id/oneWayRadioToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/radio_one_way"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/originLabel"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/origin_label"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/originInput"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/origin_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/destinationLabel"
        android:layout_width="102dp"
        android:layout_height="21dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/destination_label"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/destinationInput"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/origin_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/originInput" />

    <EditText
        android:id="@+id/originInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="111dp"
        android:ems="10"
        android:hint="@string/origin_label"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/returnDateInput"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/date_input_field"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/destinationInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/destinationInput"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/destinationInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/destination_label"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originInput" />

    <EditText
        android:id="@+id/departureInput"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/date_input_field"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/originInput"
        app:layout_constraintLeft_toRightOf="@+id/originInput"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/returningLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="129dp"
        android:text="@string/returing_label"
        android:textAllCaps="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/destinationLabel"
        app:layout_constraintLeft_toRightOf="@+id/destinationLabel"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.027" />

    <TextView
        android:id="@+id/departingLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:text="@string/departing_label"
        android:textAllCaps="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/originLabel"
        app:layout_constraintLeft_toRightOf="@+id/originLabel"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        android:onClick="sendData"
        android:text="@string/submit_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnDateInput" />
</android.support.constraint.ConstraintLayout>
